--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "The Developers",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "express": "^4.18.2",
     "mongoose": "^8.1.1"
   }
